--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,24 +6,30 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #afc1d0; /* Background color */
-    color: #0b1320; /* Main text color */
+    background-color: #0b1320; /* Background color */
+    color: #fff; /* Main text color */
 }
 
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #1c3f60; /* Header background color */
+    background-color: #0b1320; /* Header background color */
     color: white;
-    padding: 20px;
+    padding: 10px;
 }
 
-header .logo h1 {
-    font-size: 2rem;
+header .logo img {
+    width: 70px;
+    height: auto;
+}
+
+header .logo {
+    margin-left: 20px;
 }
 
 header nav ul {
+    margin-right: 20px;
     list-style: none;
     display: flex;
     gap: 20px;
@@ -39,57 +45,158 @@ header nav ul li a:hover {
     text-decoration: underline;
 }
 
-.main-section {
-    padding: 50px 20px;
-    text-align: center;
-    background-color: #436286; /* Main section background color */
+header nav ul li:last-child {
+    margin-right: 20px;
+}
+
+#landing {
+    position: relative;
+    background: url(/assets/img/landingpagebg.png) no-repeat center center;
+    background-size: cover;
+    background-attachment: fixed;
     color: white;
+    text-align: center;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.main-section h2 {
-    font-size: 3rem;
+#landing::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+}
+
+.landing-content {
     margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    z-index: 2;
+    text-align: center;
 }
 
-.main-section p {
-    font-size: 1.3rem;
-    margin-bottom: 30px;
+.landing-content h1 {
+    font-size: 5rem;
+    font-weight: bold;
+}
+
+.landing-content {
+    font-size: 1.5rem;
+    margin-top: 10px;
 }
 
 .cta-btn {
-    padding: 15px 30px;
-    font-size: 1.2rem;
-    background-color: #8799a7; /* CTA button background */
+    margin-top: 20px;
+    font-size: 0.9rem;
+    padding: 8px 16px;
+}
+
+#home {
+    position: relative;
+    background: url(/assets/img/landingpagebg2.png) no-repeat center center;
+    background-size: cover;
+    padding: 100px 20px;
+    text-align: center;
+    color: white;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container {
+    position: relative;
+    z-index: 2;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1300px;
+    margin: auto;
+    padding: 60px;
+    background: rgba(0, 0, 0, 0.6);
+    border-radius: 15px;
+    box-shadow: 0 4pc 10pc rgba(255, 255, 255, 0.2);
+}
+
+.cta-btn {
+    padding: 5px 10px;  
+    font-size: 1rem;
+    background-color: transparent; /* CTA button background */
     color: white;
     text-decoration: none;
+    border: 2px solid white;
     border-radius: 5px;
     transition: background-color 0.3s;
+    display: inline-block;
 }
 
 .cta-btn:hover {
-    background-color: #1c3f60; /* CTA button hover effect */
+    background-color: white; /* CTA button hover effect */
+    color: black;
 }
 
-.about-section {
-    padding: 50px 20px;
+.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1100px;
+    margin: auto;
+    padding: 40px;
+    background: rgba(0, 0, 0, 0.6);
+    border-radius: 15px;
+    box-shadow: 0 4px 10px rgba(255, 255, 255, 0.2);
+}
+
+.text-container {
+    text-align: left;
+}
+
+.text-container h2 {
     text-align: center;
-    background-color: #f4f4f9;
+    margin-bottom: 20px;
 }
 
-.about-section h2 {
+.text-container p {
+    font-size: 1rem;
+    text-align: left;
+}
+
+.text-content {
+    width: 60%;
+    text-align: justify;
+}
+
+.text-content h2 {
     font-size: 2.5rem;
     margin-bottom: 20px;
 }
 
-.about-section p {
+.text-content p {
     font-size: 1.2rem;
-    margin-bottom: 30px;
+    line-height: 1.6;
+    margin-bottom: 20px;
+}
+
+.image-content img {
+    width: 350px;
+    height: 350px;
+    background: url(/assets/img/logosq.png) no-repeat center center;
+    background-size: cover;
+    border-radius: 10px;
 }
 
 footer {
-    background-color: #1c3f60; /* Footer background */
+    background-color: #0b1320;
     color: white;
     text-align: center;
     padding: 20px;
-    margin-top: 30px;
+    margin-top: 30px;   
 }
