--- a/pages/movies/assets/css/style.css
+++ b/pages/movies/assets/css/style.css
@@ -97,7 +97,7 @@ header nav ul li a.active {
     margin: 5px;
     width: 50px;
     height: 50px;
-    background: transparent;
+    background: black;
     border: 2px solid #ffffff;
     cursor: pointer;
     font-size: 16px;
@@ -107,14 +107,18 @@ header nav ul li a.active {
     transition: 0.3s;
 }
 
-.seat:hover {
-    background: rgba(255, 255, 255, 0.2);
+.seat.reserved {
+    background-color: red !important;
+    cursor: not-allowed;
 }
 
 .seat.selected {
-    background: #dc3545;
-    color: white;
-    cursor: not-allowed;
+    background-color: rgba(255, 255, 255, 0.6) !important;
+}
+
+.seat:hover:not(.reserved) {
+    background: rgba(255, 255, 255, 0.4);
+    color: black;
 }
 
 input, select {
