--- a/pages/movies/assets/css/style.css
+++ b/pages/movies/assets/css/style.css
@@ -5,13 +5,21 @@
     font-family: Arial, sans-serif;
 }
 
+#bg-video {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     text-align: center;
-    background: url('../img/bg.gif') no-repeat center center fixed;
-    background-size: cover;
     color: white;
 }
 
@@ -73,20 +81,25 @@ header nav ul li a.active {
     color: white;
 }
 
-.button.back {
-    background-color: rgba(255, 255, 255, 0.2);
-    color: white;
-    padding: 10px;
-    border: none;
-    cursor: pointer;
-    font-size: 16px;
+#back, button {
+    display: block;
     width: 100%;
-    margin-top: 15px;
+    padding: 12px;
+    margin-top: 20px;
+    border: none;
+    background: #f4b400;
+    color: black;
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
     border-radius: 5px;
+    transition: 0.3s;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 .button.back:hover {
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: #e09b00;
 }
 
 .screen {
