--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,15 +6,15 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #0b1320; /* Background color */
-    color: #fff; /* Main text color */
+    background-color: #0b1320;
+    color: #fff;
 }
 
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #0b1320; /* Header background color */
+    background-color: #0b1320;
     color: white;
     padding: 10px;
 }
@@ -39,11 +39,12 @@ header nav ul li a {
     color: white;
     text-decoration: none;
     font-size: 1.1rem;
+    transition: color 0.3s ease-in-out, transform 0.2s ease-in-out;
 }
 
 header nav ul li a:hover {
-    text-decoration: underline;
-}
+    opacity: 0.7;
+    transform: scale(1.1);}
 
 header nav ul li:last-child {
     margin-right: 20px;
@@ -52,8 +53,7 @@ header nav ul li:last-child {
 header nav ul li a.active {
     color: white;
     font-weight: bold;
-    border-bottom: 2px solid white;
-    transition: 0.3s ease-in-out;
+    border-bottom: none;
 }
 
 .logo-overlay {
@@ -150,7 +150,7 @@ header nav ul li a.active {
 .cta-btn {
     padding: 5px 10px;  
     font-size: 1rem;
-    background-color: transparent; /* CTA button background */
+    background-color: transparent;
     color: white;
     text-decoration: none;
     border: 2px solid white;
@@ -160,7 +160,7 @@ header nav ul li a.active {
 }
 
 .cta-btn:hover {
-    background-color: white; /* CTA button hover effect */
+    background-color: white;
     color: black;
 }
 
