--- a/pages/movies/css/style.css
+++ b/pages/movies/css/style.css
@@ -61,11 +61,12 @@ header nav ul li a {
     color: white;
     text-decoration: none;
     font-size: 1.1rem;
+    transition: color 0.3s ease-in-out, transform 0.2s ease-in-out;
 }
 
 header nav ul li a:hover {
-    text-decoration: underline;
-}
+    opacity: 0.7;
+    transform: scale(1.1);}
 
 header nav ul li:last-child {
     margin-right: 20px;
@@ -74,8 +75,7 @@ header nav ul li:last-child {
 header nav ul li a.active {
     color: white;
     font-weight: bold;
-    border-bottom: 2px solid white;
-    transition: 0.3s ease-in-out;
+    border-bottom: none;
 }
 
 .movie-section {
