--- a/pages/loyalty/assets/css/style.css
+++ b/pages/loyalty/assets/css/style.css
@@ -1,21 +1,32 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, sans-serif;
 }
 
 html, body {
     background-color: #183057 !important;
 }
 
+header, footer {
+    background-color: #0b1320;
+    color: white;
+    text-align: center;
+    padding: 15px;
+    font-family: Arial, sans-serif !important; 
+}
+
+body *:not(header):not(footer) {
+    font-family: 'Merriweather Sans', sans-serif;
+}
+
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #0b1320;
-    color: white;
-    padding: 10px;
 }
 
 header .logo img {
@@ -43,7 +54,8 @@ header nav ul li a {
 
 header nav ul li a:hover {
     opacity: 0.7;
-    transform: scale(1.1);}
+    transform: scale(1.1);
+}
 
 header nav ul li:last-child {
     margin-right: 20px;
@@ -244,12 +256,8 @@ header nav ul li a.active {
 }
 
 footer {
-    background-color: #0b1320;
-    color: white;
-    text-align: center;
-    padding: 20px;
+    font-family: Arial, sans-serif !important; 
 }
-
 
 @media (max-width: 768px) {
     .ticket-container {
