--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -5,18 +8,25 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
     background-color: #0b1320;
     color: #fff;
+}
+
+header, footer {
+    background-color: #0b1320;
+    color: white;
+    font-family: Arial, sans-serif !important;
+    padding: 10px;
+}
+
+body *:not(header):not(footer) {
+    font-family: 'Merriweather Sans', sans-serif;
 }
 
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #0b1320;
-    color: white;
-    padding: 10px;
 }
 
 header .logo img {
@@ -44,7 +54,8 @@ header nav ul li a {
 
 header nav ul li a:hover {
     opacity: 0.7;
-    transform: scale(1.1);}
+    transform: scale(1.1);
+}
 
 header nav ul li:last-child {
     margin-right: 20px;
@@ -217,6 +228,7 @@ header nav ul li a.active {
 footer {
     background-color: #0b1320;
     color: white;
+    font-family: Arial, sans-serif !important; 
     text-align: center;
     padding: 20px;
 }
