--- a/pages/movies/css/style.css
+++ b/pages/movies/css/style.css
@@ -8,8 +8,20 @@
 }
 
 body {
-    font-family: "Roboto", sans-serif;
     background-color: #f5f5f5;
+}
+
+/* Force Roboto for header and footer */
+header, footer {
+    background-color: #0b1320;
+    color: white;
+    font-family: "Roboto", sans-serif !important;
+    padding: 10px;
+}
+
+/* Merriweather Sans for main content */
+body *:not(header):not(footer) {
+    font-family: "Merriweather Sans", sans-serif;
 }
 
 #bg-video {
@@ -36,9 +48,6 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #0b1320;
-    color: white;
-    padding: 10px;
 }
 
 header .logo img {
@@ -66,7 +75,8 @@ header nav ul li a {
 
 header nav ul li a:hover {
     opacity: 0.7;
-    transform: scale(1.1);}
+    transform: scale(1.1);
+}
 
 header nav ul li:last-child {
     margin-right: 20px;
@@ -166,8 +176,6 @@ header nav ul li a.active {
 }
 
 footer {
-    background-color: #0b1320;
-    color: white;
     text-align: center;
     padding: 20px;
 }
