--- a/pages/movies/css/style.css
+++ b/pages/movies/css/style.css
@@ -11,7 +11,6 @@ body {
     background-color: #f5f5f5;
 }
 
-/* Force Roboto for header and footer */
 header, footer {
     background-color: #0b1320;
     color: white;
@@ -19,7 +18,6 @@ header, footer {
     padding: 10px;
 }
 
-/* Merriweather Sans for main content */
 body *:not(header):not(footer) {
     font-family: "Merriweather Sans", sans-serif;
 }
@@ -110,16 +108,18 @@ header nav ul li a.active {
 .movies {
     display: flex;
     justify-content: center;
-    gap: 20px;
+    gap: 60px;
     flex-wrap: wrap;
     align-items: stretch;
+    margin-top: 20px;
+    margin-bottom: 40px;
 }
 
 .movie-card {
     background: white;
     border-radius: 10px;
     overflow: hidden;
-    width: 250px;
+    width: 280px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     text-align: center;
     padding: 15px;
@@ -128,11 +128,12 @@ header nav ul li a.active {
     justify-content: space-between;
     align-items: center;
     height: 100%; 
+    margin: 10px;
 }
 
 .movie-card img {
     width: 100%;
-    height: 300px;
+    height: 340px;
     object-fit: cover;
 }
 
